--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button>Reset</button>
             </div>
             <div>
-            <input type="text" placeholder="Size of Board" value="16">
+            <input type="text" placeholder="Size of Board" value="16" onchange="changeSize(this.value)">
             <button>Set Size</button>
             </div>
         </div>
