--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <div class="content">
             <div class="board"></div>
             <div class="buttons">
-                <button>Black</button>
-                <button>Green</button>
-                <button>Random</button>
+                <button onclick="changeColor('black')">Black</button>
+                <button onclick="changeColor('green')">Green</button>
+                <button onclick="changeColor('yellow')">Yellow</button>
+                <button onclick="changeColor('random')">Random</button>
                 <button>Reset</button>
             </div>
             <div>
