Added functionality to the reset button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <button onclick="changeColor('green')">Green</button>
                 <button onclick="changeColor('yellow')">Yellow</button>
                 <button onclick="changeColor('random')">Random</button>
-                <button>Reset</button>
+                <button onclick=" resetBoard()">Reset</button>
             </div>
             <div>
             <input type="text" placeholder="Size of Board" value="16" onchange="changeSize(this.value)">
