--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="flex-container">
         <div class="title"><h1>SketchPad</h1></div>
+        <div class="mode">Mode: Coloring</div>
         <div class="content">
             <div class="board"></div>
             <div class="buttons">
