Put an error message that requires range between 2 and 100

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <div>
             <input type="text" placeholder="Size of Board" value="16" onchange="changeSize(this.value)">
             <button>Set Size</button>
+            <div class="error">
+                Input must be between 2 and 100
+            </div>
             </div>
         </div>
     </div>
