--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="content">
             <div class="board"></div>
             <div class="buttons">
-                <button onclick="changeColor('black')">Black</button>
-                <button onclick="changeColor('green')">Green</button>
-                <button onclick="changeColor('yellow')">Yellow</button>
-                <button onclick="changeColor('random')">Random</button>
+                <button class = "blackButton" onclick="changeColor('black')">Black</button>
+                <button class = "erasorButton"onclick="changeColor('white')">Erasor</button>
+                <button class = "greenButton"onclick="changeColor('green')">Green</button>
+                <button class = "randomButton"onclick="changeColor('random')">Random</button>
                 <button onclick=" resetBoard()">Reset</button>
             </div>
             <div>
