--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -12,15 +12,14 @@
     <h1>Etch-A-Sketch</h1>
     <div class="header">
         <h6>Select the Size</h6>
-        <button id="popup">Select</button>
+        <button id="popup" class="btn btn-danger">Select</button>
     </div>
-    <div class="container">
-        <div class="footer">
-            <button>Black</button>
-            <button>Random</button>
-            <button>Reset</button>
-        </div>
-    </div>    
+    <div class="container"></div>
+    <div class="footer">
+        <button class="btn btn-dark">Black</button>
+        <button class="btn btn-warning">Random</button>
+        <button class="btn btn-primary">Reset</button>
+    </div>
 </body>
 <script src="index.js"></script>
 </html>
