--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -14,6 +14,8 @@
         <h6>Select the Size</h6>
         <button id="popup" class="btn btn-danger">Select</button>
     </div>
+    <p id="message"></p>
+    </p>
     <div class="board"></div>
     <div class="footer">
         <button class="btn btn-dark">Black</button>
