Set the conditions to begin playing on the board

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -12,7 +12,7 @@
     <h1>Etch-A-Sketch</h1>
     <div class="header">
         <h6>Select the Size</h6>
-        <button id="popup" class="btn btn-danger">Select</button>
+        <button id="popup" class="btn btn-danger" onclick="getSize()">Select</button>
     </div>
     <p id="message"></p>
     </p>
